<resources>
    <string name="app_name">Evergreen Lanka</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Evergreen Lanka</string>
    <string name="nav_header_subtitle">evergreen.lanka@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>
    <string name="unknown">Unknown</string>

    <!-- home page -->
    <string name="today">ToDay</string>
    <string name="sales">Sales</string>
    <string name="synchronize">Synchronize</string>
    <string name="invoices">Invoices</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="never">Never</string>

    <!-- invoice page -->
    <string name="invoice_no">Invoice no</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoice_to">Invoice to</string>
    <string name="items">Items</string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="print">Print</string>
    <string name="click_to_select">Click to Select</string>
    <string name="quantity">1</string>
    <string name="add_to_invoice">Add to Invoice</string>
    <string name="proceed">Proceed</string>
    <string name="add_item">Add Item</string>
    <string name="payment">Payment</string>
    <string name="total">Total</string>
    <string name="item_remove">Item removed from invoice</string>
    <string name="undo">Undo</string>
    <string name="add_user">Add User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="payment_type">Payment Type</string>
    <string name="cheque_no">Cheque No</string>
    <string name="amount">Amount</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="one_pcs_price">1pcs \t Rs. </string>
    <string name="exit">Exit</string>
    <string name="exit_message_invoice">Do you wish to save the invoice before exit?</string>
    <string name="save_message_invoice">Do you wish to save and exit the invoice?</string>
    <string name="save_message_payment">Are you sure want to add the payment?</string>

    <!-- Printer page -->
    <string name="start_print">Start Print</string>
    <string name="select_printer">Initialize Printer</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="balance">Balance</string>
    <string name="search_title">Search Invoice</string>
    <string name="search_hint">Invoice Id/Customer</string>
    <string name="no_results_found">No results found</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="print_balance">Print Balance</string>
    <string name="sync_all">Sync All</string>
</resources>
